Fixes for spacing in headers

--- a/components/main/layout/FundraiserHeader/FundraiserHeader.module.scss
+++ b/components/main/layout/FundraiserHeader/FundraiserHeader.module.scss
@@ -1,5 +1,5 @@
 .header {
-  max-width: 1920px;
+  max-width: 1714px;
   position: relative;
   height: 30rem;
   width: 100%;
