--- a/components/shared/layout/Layout/Layout.module.scss
+++ b/components/shared/layout/Layout/Layout.module.scss
@@ -1,7 +1,7 @@
 .container {
   padding: 0 0;
   margin: 0 auto;
-  padding-top: 262px;
+  padding-top: 106px;
 }
 
 .modalOpen {
